--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -6,7 +6,7 @@ html, body {
     padding: 0;
     overflow-x: hidden; /* 가로 스크롤 방지 */
     font-family: "Poppins", Arial, sans-serif;
-    background: #f4f7f9;
+    background: #ffffff;
     color: #333;
 }
 
