--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -1,3 +1,25 @@
+@import url('https://cdn.jsdelivr.net/npm/pretendard/dist/web/static/pretendard.css');
+
+body, .nexon {
+    font-family: 'Pretendard', sans-serif;
+}
+
+/* ✅ 기본 스타일 */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+li {
+    list-style: none;
+}
+
 /* 전체 페이지 */
 html, body {
     width: 100%;
