--- a/src/assets/css/userinfor.css
+++ b/src/assets/css/userinfor.css
@@ -1,4 +1,3 @@
-/* 프로필 박스: 중앙 정렬 + 아래로 내리기 */
 .profile-box {
   background: #ffffff;
   width: 100%;
@@ -6,10 +5,8 @@
   padding: 50px;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  margin-left: 270px;
-  
-  /* 추가된 코드 */
-  margin-top: 50px; /* 박스를 아래로 내리기 */
+  margin-top: 700px;
+  margin-bottom: 50px;
 }
 
 .title {
